--- a/1.html
+++ b/1.html
@@ -3,26 +3,29 @@
 <head>
     <title>WEB1 - html</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1><a href="index.html" target="_blank" title="WEB">WEB</a></h1>
-<ol>
-  <li><a href="1.html" target="_blank" title="html"> HTML</a></li>
-  <li><a href="2.html" target="_blank" title="css"> CSS</a></li>
-  <li><a href="3.html" target="_blank" title="JAVASCRIPT"> JAVASCRIPT</a></li>
-</ol>
+  <h1><a href="index.html">WEB</a></h1>
+<div id="grid">
+  <ol>
+    <li><a href="1.html" id="active"> HTML</a></li>
+    <li><a href="2.html"> CSS</a></li>
+    <li><a href="3.html"> JAVASCRIPT</a></li>
 
-<h2>HTML</h2>
-<center>
-<p><a href="https://www.w3.org/TR/html52/"
-  target="_blank" title="html5 specification">hypertext markup language (HTML)</a> is the standard markup
-language for <strong>creating <u>web</u> pages</strong> applications.
-<img src="coding.jpg" width="30%">
-<br><br>Search Results
-Featured snippet from the web
-<p>A line break ends the line you are currently on and resumes on the next
-line.</p> <p style="margin-top:40px;">Placing  within the code is the same as pressing the return
-key in a word processor.</p> Use the <br /> tag within the <p> (paragraph)
-  tag
-</center>
+  </ol>
+   <div id="article">
+    <h2>HTML</h2>
+      target="_blank" title="html5 specification">hypertext markup language (HTML)
+      </a> is the standard markup
+      language for <strong>creating <u>web</u> pages</strong> applications.
+      Search Results
+      Featured snippet from the web
+      A line break ends the line you are currently on and resumes on the next
+      line. <p style="margin-top:40px;"><strong>Placing  within the code is the same as pressing the return
+      key in a word processor. Use the tag within the (paragraph)</strong>
+      tag
+      </p>
+   </div>
+</div>
 </body>
